3.kubernetes-yaml/cms/sastix-cms-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sastix-cms
    component: stastix-cms-app
  name: sastix-cms
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 9082
  selector:
    app: sastix-cms
