3.kubernetes-yaml/cms/sastix-cms-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sastix-cms
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: sastixcms.kube.local
    http:
      paths:
      - path: /
        backend:
          serviceName: sastix-cms
          servicePort: http
